--- a/src/components/flat.css
+++ b/src/components/flat.css
@@ -4,6 +4,11 @@ change in every devide
 For us the box takes 50% minus 20px, which are 10px on each side -->
     flex-basis: calc(50% - 20px);
 	margin: 10px;
+	cursor: pointer;
+}
+
+.flat:hover {
+	opacity: 0.8;
 }
 
 .flat-picture {
